File and Search optimize
