# routes/api_app.php
@@ -21,4 +21,4 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::apiResource('subject', \App\Http\Controllers\API\V1\APP\SubjectController::class)->only(['index','show']);
 Route::get('file-by-subject/{subject_id}', [\App\Http\Controllers\API\V1\APP\FileController::class, 'index']);
 Route::get('file-by-keyword/{keyword}', [\App\Http\Controllers\API\V1\APP\FileController::class, 'show']);
-Route::post('file-search/', [\App\Http\Controllers\API\V1\APP\FileController::class, 'search']);
+Route::post('file-search/{text}', [\App\Http\Controllers\API\V1\APP\FileController::class, 'search']);
