# routes/api_web.php
@@ -20,5 +20,7 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::apiResource('subject', \App\Http\Controllers\API\V1\WEB\SubjectController::class)->only(['index','show']);
 Route::get('file-by-subject/{subject_id}', [\App\Http\Controllers\API\V1\WEB\FileController::class, 'index']);
 Route::get('file-by-keyword/{keyword}', [\App\Http\Controllers\API\V1\WEB\FileController::class, 'show']);
-Route::get('search/{text}', [\App\Http\Controllers\API\V1\WEB\FileController::class, 'search']);
+Route::post('search/{text}', [\App\Http\Controllers\API\V1\WEB\FileController::class, 'search']);
+
+Route::get('file/{filename}', [\App\Http\Controllers\API\V1\WEB\FileController::class, 'getFiles'])->name('object');
 
